# phaethon-chimera

./: .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
data/: destiny_plus_targets.yaml  phaethon_orbital_elements.yaml  ztf_photometry_summary.yaml
docs/: cli.md  destiny.md  index.md
src/phaethon_chimera/: __init__.py  benchmark.py  chimera_detector.py  cli.py  constants.py  destiny_predictions.py  dust_emission.py  frustrated_utac.py  geminid_model.py  orbital.py  soc_phaethon.py  system.py
tests/: test_cli.py  test_phaethon_chimera.py  test_preset.py
