[project]
name = "phaethon-chimera"
version = "1.0.0"
description = "Phaethon-Asteroid: Frustrierte Systeme & Chimera-Zustände — GenesisAeon Package 35"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Johann Römer", email = "joberoemer@gmail.com" }]
requires-python = ">=3.11"
keywords = [
    "phaethon", "asteroid", "chimera-state", "frustrated-systems",
    "UTAC", "CREP", "SOC", "DESTINY+", "Geminids",
    "complex-systems", "GenesisAeon", "orbital-mechanics",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.7.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
]

[project.scripts]
phaethon = "phaethon_chimera.cli:app"

[project.urls]
Homepage = "https://github.com/GenesisAeon/phaethon-chimera"
Repository = "https://github.com/GenesisAeon/phaethon-chimera"
Zenodo = "https://doi.org/10.5281/zenodo.17472834"
Whitepaper = "https://doi.org/10.5281/zenodo.19645351"
Issues = "https://github.com/GenesisAeon/phaethon-chimera/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phaethon_chimera", "src/diamond_setup"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W", "UP", "C4", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "numpy>=2.4.6",
    "pytest>=9.0.2",
    "scipy>=1.17.1",
]
